css/styles.css
/* ... */
.header .nav-links {
    list-style: none;
}

.header .nav-links li{
    display: inline-block;
    padding: 0 20px;
}

.header .nav-links li:hover {
    transform: scale(1.1);
}

.header .nav-links a{
    font-size: 700;
    color: #eceff1;
    cursor: pointer;
}

.header .nav-links li a:hover {
    color: #daa322;
}

.menu, .menu-xs{
    display: none;
}
.swiper-slide img {
    width: 100%;
    height: auto;
    border-radius: 20px;
}
.menu-xs i {
    font-size: 40px;
    color: #daa322;
}
.resenas {
  position: relative;
  margin: 0 50px;
}
.header .btn button,
.header .menu button {
    font-weight: 700;
    padding: 9px 25px;
    background: #eceff1;
    border: none;
    border-radius: 50px;
    cursor: pointer;
    transition: all 0.3 ease 0s;
}

.header .btn button:hover,
.header .menu button:hover {
    background-color: #e2f1f8;
    transform: scale(1.1);
}

/*Media querys*/

@media screen and (max-width: 1122px) {
    .header .nav-links li {
        padding: 5px;
    }
}

@media screen and (max-width: 973px) {
    .header .navbar .nav-links li a,
    .header .btn button  {
        font-size: 15px;  
    }  
}

@media screen and (max-width: 973px) {
    .header .logo img {
        width: 190px;
    }
}

@media screen and (max-width: 800px) {
    .nav-links, .btn{
        display: none;
    }
    .menu {
        display: inherit;
    }
}

@media screen and (max-width: 425px) {
    .menu-xs {
        display: inherit;
    }

    .menu {
        display: none;
    }

    .header .logo img {
        width: 150px;
        height: fit-content;
    }
}

.header a{
    text-decoration: none;
}

.header .overlay {
    height: 100%;
    width: 0;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    background-color: rgba(33, 49, 63, .95);
    overflow: hidden;
    transition: all 0.3s ease 0s;
}

.header .overlay .overlay-content {
    display: flex;
    height: 100%;
    flex-direction: column;
    align-items: center;
    justify-content:center;
}

.header .overlay a{
    padding: 15px;
    font-size: 20px;
    display: block;
    transition: all 0.3s ease 0s;
    font-weight: 600;
    color:#eceff1;
}

.header .overlay a:hover,
.header .overlay a:focus {
    color: #daa322;
}

.header .overlay .close {
    position: absolute;
    top: -10px;
    right: 17px;
    font-size: 50px;
}

.overlay-promo {
    height: 100%;
    width: 0;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    background-color: rgba(33, 49, 63, .95);
    overflow: hidden;
    transition: all 0.3s ease 0s;
}

.overlay-promo .overlay-content {
    display: flex;
    height: 100%;
    flex-direction: column;
    justify-content:center;
    margin-left: 10%;
    margin-right: 10%;
}

.overlay-promo .close {
    position: absolute;
    top: 20px;
    right: 17px;
    font-size: 50px;
    color: #eceff1;
}

@media screen and (max-height:450px){
    .header .overlay a{
        font-size: 20px;
    }

    .header .overlay .close {
        font-size: 40px;
        top: 15px;
        right: 35px;
    }
}

/*Estilos de la sección hero*/
.hero {
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative; 
    margin-top: 20px;
    flex-direction: column;
}

.container {
    padding: 16px;
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 20px;
    margin-left: 30px;
    margin-right: 30px;
}

.container-slider {
    width: 90%;
    max-width: 600px;
    margin: auto;
    overflow: hidden;
    position: relative;
    margin: 20px 15px 40px 15px;
    width: 250px;
}

.slider {
    display: flex;
    width: 300%;
    height: 100%;
    margin-left: -100%;
    justify-content: center;
    align-items: center;
}

.slider-item {
    width: 100%;
    max-height: 100%;
    margin-left: 10px;
    margin-right: 10px;
}

.slider-img {
    display: block;
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 10px;
}

.slider-img img {
    width: 200px;
}

.slider-btn {
    position: relative;
    cursor: pointer;
    color: #0b273f;
}

.slider-btn:hover {
    transform: scale(1.1);
    color: #daa322;
    cursor: pointer;
}

.right {
    right: 20px;
}

.left {
    left: 20px;
}

/*Estilos seccion nosotros*/
.about-us {
    display: grid;
    place-items: center;
    background-color: #0b273f;
}
.desktop {
  display: none;
}
.movil {
  padding-bottom: 10px;
}
.movil a {
  padding: 10px 15px;
  text-decoration: none;
  background-color: #daa322;
  border-radius: 20px;
  color: white;
  transition: all 0.275s linear;
}
.movil a:hover {
  background-color: #f5ce72;
  border: 2px #daa322 solid;
}
.ver {
  display: flex !important;
}
.movil .mas-info {
  display: none;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}
.movil .mas-info img {
  width: 100%;
  padding: 20px;
  border-radius: 40px;
}
.about-us p {
    margin: 20px;
    color: #e2f1f8;
    text-align: justify;
}

.clinica {
    display: flex;
    flex-direction: column;
    padding: 25px;
}

.clinica-img {
    max-width: 100%;
    object-fit: cover;
    margin-top: 20px;
}

.more-info {
    display: grid;
    place-items: center;
    width: 100%;
    background: #fff fixed no-repeat 50% 50%;
    background-size: cover;
}

.more-info p {
    margin: 20px;
    text-align: center;
    color: #0b273f;
    font-weight: 700
}

#parallax {
    background-image: url('../img/paralax.jpg');
}

.container-parallax {
    background-color: #eceff1;
    display: grid;
    place-items: center;
    margin: 30px;
    border-radius: 10px;
    padding: 15px;
}

.more-info .btn-mas-info button{
    font-weight: 300;
    padding: 9px 25px;
    background: #0b273f;
    border: none;
    border-radius: 50px;
    cursor: pointer;
    transition: all 0.3 ease 0s;
    color: white;
    margin-bottom: 20px;
}

.more-info a:hover {
    transform: scale(1.1);
    transition: all 0.275s linear;
}
/* ... */

